--- a/starter.html
+++ b/starter.html
@@ -28,9 +28,11 @@
         //
         // set position here 
         //
-
+        newimg.style.left = position.x;
+        newimg.style.top = position.y;
+       
         // add new Child image to game
-        game.appendChild( ? ? ? );
+        game.appendChild(newimg);
         // return details in an object
         return {
             position,
@@ -56,6 +58,12 @@
         //
         // detect collision with all walls and make pacman bounce
         //
+        if(item.position.x + item.velocity.x + item.newimg.width > window.innerWidth ||
+           item.position.x + item.velocity.x < 0 )
+           item.velocity.x = -item.velocity.x;
+        if(item.position.y + item.velocity.y + item.newimg.height >window.innerHeight ||
+           item.position.y + item.velocity.y < 0 ) 
+           item.position.y = -item.velocity.y
     }
 
     function makeOne() {
