--- a/starter.html
+++ b/starter.html
@@ -63,7 +63,7 @@
            item.velocity.x = -item.velocity.x;
         if(item.position.y + item.velocity.y + item.newimg.height >window.innerHeight ||
            item.position.y + item.velocity.y < 0 ) 
-           item.position.y = -item.velocity.y
+           item.velocity.y = -item.velocity.y;
     }
 
     function makeOne() {
