--- a/starter.html
+++ b/starter.html
@@ -1,19 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<html>
  <head>
         <meta charset="UTF-8">
         <meta name="description" content="pacmen execrise">
         <meta name="keywords" content="Shaima Nimeri,HTML, CSS, JavaScript">
-        <meta name="author" content="Shaima Nimeri">
+        <meta name="author" content="Shaima Nimeri and MIT Xpro">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pacmen Excercise</title>
 </head>
-<script src="./pacmen.js"></script>
 <body>
     <div id='game'>
         <button onclick='makeOne()' width='200' height='30'>Add PacMan</button>
         <button onclick='update()' width='200' height='30'>Start Game</button>
 
     </div>
+ <script src="./pacmen.js"></script>
 </body>
 </html>
